--- a/src/modules/table.css
+++ b/src/modules/table.css
@@ -1,6 +1,6 @@
 .table {
     background-color: #cdffea;
-    width: 800px;
+    width: 1000px;
     height: 800px;
     text-align: center;
     border: none;
@@ -8,5 +8,13 @@
 
 .table__cell {
     border: 1px solid gray;
+    width: 50px;
+    height: 60px;
 
+}
+
+.table__title {
+    font-family: Futura;
+    font-weight: bold;
+    color: gray;
 }
