--- a/src/modules/table.css
+++ b/src/modules/table.css
@@ -15,7 +15,7 @@
 }
 
 .table__title {
-    font-family: Futura;
+    font-family: Serif Arial SansSerif;
     font-weight: bold;
     color: gray;
 }
