--- a/src/components/field/field__row-cell-street-header.scss
+++ b/src/components/field/field__row-cell-street-header.scss
@@ -7,6 +7,8 @@
 
   @import "field__row-cell-street-header_yellow";
 
+  @import "field__row-cell-street-header_purple";
+
   @import "field__row-cell-street-header_red";
 
   @import "field__row-cell-street-header_red";
