Edited layout and styles

--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -8,4 +8,14 @@
   @import "__row-cell-street-header/field__row-cell-street-header";
 
   @import "__row-cell-street-titles/field__row-cell-street-titles";
+
+  @import "__row-cell-center/field__row-cell-center";
+
+  @import "__row-cell-forward/field__row-cell-forward";
+
+  @import "__row-cell-forward-start/field__row-cell-forward-start";
+
+  @import "__row-cell-forward-text/field__row-cell-forward-text";
+
+  @import "__row-cell-center-promo/field__row-cell-center-promo";
 }
