Removed excess code and code-style

--- a/src/components/field/__row-cell-street-titles/field__row-cell-street-titles.scss
+++ b/src/components/field/__row-cell-street-titles/field__row-cell-street-titles.scss
@@ -1,7 +1,5 @@
 &__row-cell-street-titles-text {
-  display: flex;
-  justify-content: center;
-
+  text-align: center;
   padding: 20px 10px;
 
   text-transform: uppercase;
