--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -24,4 +24,20 @@
   @import "__row-cell-street-chance-titles/field__row-cell-street-chance-titles";
 
   @import "__row-cell-chance-questions/field__row-cell-chance-questions";
+
+  @import "__row-cell-railway/field__row-cell-railway";
+
+  @import "__row-cell-railway-titles/field__row-cell-railway-titles";
+
+  @import "__row-cell-treasury/field__row-cell-treasury";
+
+  @import "__row-cell-treasury-titles/field__row-cell-treasury-titles";
+
+  @import "__row-cell-treasury-pictures/field__row-cell-treasury-pictures";
+
+  @import "__row-cell-treasury-overtax/field__row-cell-treasury-overtax";
+
+  @import "__row-cell-treasury-overtax-titles/field__row-cell-treasury-overtax-titles";
+
+  @import "__row-cell-treasury-overtax-picture/field__row-cell-treasury-overtax-picture";
 }
