--- a/src/style.scss
+++ b/src/style.scss
@@ -2,12 +2,7 @@
 
 @import "components/button/button";
 
-
-html, body {
+body {
   display: flex;
-  flex-direction: column;
-  margin: 0;
-  padding: 0;
-
   font-family:SansSerif, Arial, Serif;
 }
