Removed redundat code

--- a/src/components/button/__link-text/button__link-text.scss
+++ b/src/components/button/__link-text/button__link-text.scss
@@ -1,8 +1,7 @@
 &__link-text {
 
   text-decoration: none;
-  color: white;
-  background-color: #101d93;
+  color: green;
 
   font-size: larger;
   font-weight: normal;
