Удалены лишние точки из ссылок на картинки. Исправили ошибку, которая ломала сборку, из-за чего не собирались стили.

--- a/src/components/field/__row-cell-center-picture/_logo/field__row-cell-center-picture_logo.scss
+++ b/src/components/field/__row-cell-center-picture/_logo/field__row-cell-center-picture_logo.scss
@@ -3,5 +3,5 @@
   align-items: stretch;
   padding: 100px;
   
-  content: url("../images/monopoly_logo.png");
+  content: url("./images/monopoly_logo.png");
 }
