Добавленые ссылки на стили новых элементов

--- a/src/components/field/field.scss
+++ b/src/components/field/field.scss
@@ -11,6 +11,14 @@
 
   @import "__row-cell-center/field__row-cell-center";
 
+  @import "__row-cell-center-picture/field__row-cell-center-picture";
+
+  @import "__row-cell-center-picture-chance/field__row-cell-center-picture-chance";
+
+  @import "__row-cell-center-picture-cazna/field__row-cell-center-picture-cazna";
+
+  @import "__row-cell-center-picture-logo/field__row-cell-center-picture-logo";
+
   @import "__row-cell-forward/field__row-cell-forward";
 
   @import "__row-cell-forward-start/field__row-cell-forward-start";
@@ -52,4 +60,5 @@
   @import "__row-cell-plumbing-picture/field__row-cell-plumbing-picture";
 
   @import "__row-cell-plumbing-titles/field__row-cell-plumbing-titles";
+
 }
