Фикс текущего состояния репозитория

--- a/src/components/field/__row-cell-street-titles/field__row-cell-street-titles.scss
+++ b/src/components/field/__row-cell-street-titles/field__row-cell-street-titles.scss
@@ -1,5 +1,7 @@
 &__row-cell-street-titles-text {
-  text-align: center;
+  display: flex;
+  align-items: center;
+
   padding: 20px 10px;
 
   text-transform: uppercase;
